src/sass/base/base-fields.scss
/* ... */
.en__field__input--checkbox:checked + .en__field__label::before,
.en__contactDetails__select:checked + .en__contactDetails__rows::before {
  color: var(
    --client-checkmark-background-color,
    $client-checkmark-background-color
  );
  background-color: transparent;
}

/* TODO This needs to pull in $clinet-cta instead of being hard coded to #F57E20 */
/* REF: https://stackoverflow.com/questions/25477819/scss-variable-in-background-image-with-svg-image-data-uri */
.en__field__input--checkbox:checked + .en__field__label::after,
.en__contactDetails__select:checked + .en__contactDetails__rows::after {
  content: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='21' height='16' viewBox='0 0 21 16'><path fill='#{svg-friendly-color($client-cta)}' fill-rule='nonzero' d='M18.76.16L6.68 12.113l-4.44-4.392a.555.555 0 0 0-.779 0L.161 9.006a.541.541 0 0 0 0 .771L6.29 15.84a.555.555 0 0 0 .78 0l13.77-13.624a.541.541 0 0 0 0-.771L19.539.16a.555.555 0 0 0-.779 0z'/></svg>");
  position: absolute;
  left: -28px;
  top: 0;
  width: 21px;
  height: 16px;
  color: var(
    --client-checkmark-background-color,
    $client-checkmark-background-color
  );
  background-color: transparent;
  font-size: calc(0.05552rem * 18);
}

/* QA Needed: Would like to find a way so that radio input focus is round rather than square. May require re-writing how radio inputs are styled */
.en__field__input--radio:focus + .en__field__label::before,
.en__field__input--checkbox:focus + .en__field__label::before,
.en__contactDetails__select:focus + .en__contactDetails__rows::before {
  outline: var(--client-gray, $client-gray) auto 0.3125rem;
}

/* QA Needed: EN's hidden input field */
.en__field--hidden {
  display: block;
  width: 100% !important;
}

/* Uses Padding instead of Margin because padding is counted in the Flex-basis width whereas Margin is outside */
/* One optimization idea is to break this file up into three CSS files, 1-10, 11-20, and 21-30. That was they can be included only if that template is using them. */
/* Should confirm if the EN class field could even hold enough chars to fit defining 20 fields plus their start/stop classes */
/* Why 20 pre-defined options? To cover a single form component with all of the following: * 1. First Name (50%) | 2. Last Name (50%) * 3. Email (100%) * 4. Email Opt-in (100%) * 5. Phone (100%) * 6. Phone Opt-in (100%) * 7. Street (100%) * 8. Street 2 (100%) * 9. City (33%) | 10. State (33%) | 11. Zip (33%) * 12. Country (100%) * 13. Giving Frequency (100%) * 14. Giving Amount (100%) * 15. Gift Type (100%) * 16. Credit Card Number (100%) * 17. Credit Card Expiration (50%) | 18. Credit Card CVV (50%) * 19. Custom Field (100%) * 20. Custom Field (100%) */
/* Make all en fields 100% */
.en__field {
  flex-basis: 100%;
  padding-bottom: 1rem;
  margin-bottom: 0rem;
}

.en__field__element--splittext,
.en__field__element--splitselect,
.en__field__element--tripleselect {
  align-items: flex-start;
}

/* Includes overrides of existing CSS, need for resolve this duplicate styling */
.en__field__element--splittext .en__field__item:nth-of-type(1),
.en__field__element--splitselect .en__field__item:nth-of-type(1) {
  flex-basis: 50% !important;
  padding-left: 0rem !important;
  padding-right: 0.5rem !important;
  padding-bottom: 0.5rem !important;
  margin: 0 !important;
}

/* Includes overrides of existing CSS, need for resolve this duplicate styling */
.en__field__element--splittext .en__field__item:nth-of-type(2),
.en__field__element--splitselect .en__field__item:nth-of-type(2) {
  flex-basis: 50% !important;
  padding-left: 0.5rem !important;
  padding-right: 0rem !important;
  padding-bottom: 0.5rem !important;
  margin: 0 !important;
}

/* Includes overrides of existing CSS, need for resolve this duplicate styling */
.en__field__element--tripletext .en__field__item:nth-of-type(1),
.en__field__element--tripleselect .en__field__item:nth-of-type(1) {
  flex-basis: 33.33333% !important;
  padding-left: 0rem !important;
  padding-right: 0.5rem !important;
  padding-bottom: 0.5rem !important;
  margin: 0 !important;
}

/* Includes overrides of existing CSS, need for resolve this duplicate styling */
.en__field__element--tripletext .en__field__item:nth-of-type(2),
.en__field__element--tripleselect .en__field__item:nth-of-type(2) {
  flex-basis: 33.33333% !important;
  padding-left: 0.5rem !important;
  padding-right: 0.5rem !important;
  padding-bottom: 0.5rem !important;
  margin: 0 !important;
}

/* Includes overrides of existing CSS, need for resolve this duplicate styling */
.en__field__element--tripletext .en__field__item:nth-of-type(3),
.en__field__element--tripleselect .en__field__item:nth-of-type(3) {
  flex-basis: 33.33333% !important;
  padding-left: 0.5rem !important;
  padding-right: 0rem !important;
  padding-bottom: 0.5rem !important;
  margin: 0 !important;
}

.en__component--formblock.manual-form-layout {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
}

.en__field {
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.en__component--formblock:not(.manual-form-layout) .en__field:first-child {
  padding-left: 0;
}

.en__component--formblock:not(.manual-form-layout) .en__field:last-child {
  padding-right: 0;
}

.en__field--withOther .en__field__element--select .en__field__item:first-child {
  margin-right: 0 !important;
}
/* ... */

